# KleeneEngine

./: .clang-format  .gitignore  CMakeLists.txt  README.md
assets/scenes/: File.Kleene  default.kleene  default.kleene.Kleene  default1.Kleene  default2.Kleene  test.kleene  testes.Kleene  testes2.Kleene  testes3.Kleene
assets/shaders/: blur.frag  core.frag  core.vert  grid.frag  grid.vert  particle.frag  particle.vert  screen.frag  skybox.frag  skybox.vert
assets/textures/: Sprite-0002.aseprite
include/glad/: glad.h
src/: glad.c  main.cpp
src/Audio/: AudioManager.cpp  AudioManager.h
src/Components/: Component.h  Light.h  MeshRenderer.h  ParticleSystem.cpp  ParticleSystem.h  PlayerController.cpp  PlayerController.h  SpriteRenderer.cpp  SpriteRenderer.h  Terrain.cpp  Terrain.h
src/Core/: Camera.cpp  Camera.h  Engine.cpp  Engine.h  Input.cpp  Input.h  Paths.cpp  Paths.h  Window.cpp  Window.h
src/Development/: Editor.cpp  Editor.h  EditorGrid.cpp  EditorGrid.h  EditorResources.h  EditorState.h  EditorTools.cpp  EditorTools.h  Gizmo.cpp  Gizmo.h  GuiPanel.cpp  GuiPanel.h  SystemMetrics.cpp  SystemMetrics.h  Terminal.cpp  Terminal.h
src/Development/Gui/: EditorUI.cpp  EditorUI.h  HierarchyPanel.cpp  HierarchyPanel.h  InspectorPanel.cpp  InspectorPanel.h  ToolBar.cpp  ToolBar.h
src/Gameplay/: PlayerController.cpp
src/Graphics/: FrameBuffer.cpp  FrameBuffer.h  Light.h  Material.cpp  Material.h  Material.md  Mesh.cpp  Mesh.h  ParticleManager.cpp  ParticleManager.h  PostProcessManager.cpp  PostProcessManager.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Shadowmap.cpp  Shadowmap.h  Skybox.cpp  Skybox.h  Texture.cpp  Texture.h
src/Resources/: ResourceManager.cpp  ResourceManager.h  ResourceManager.md  Texture.cpp  Texture.h
src/Scenes/: GameObject.cpp  GameObject.h  Scene.cpp  Scene.h  SceneLoader.cpp  SceneLoader.h  SceneManager.cpp  SceneManager.h  TestScene.cpp  TestScene.h
src/Utils/: Math.h  MemoryTracker.cpp  MemoryTracker.h  Telemetry.cpp  Telemetry.h
